add Location section with Google Map, better RWD, add Cta component

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.16.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
