--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "next lint --fix"
   },
   "dependencies": {
+    "@next/font": "^13.0.3",
     "@react-google-maps/api": "^2.16.1",
     "@tabler/icons": "^1.111.0",
     "@types/node": "18.11.9",
@@ -21,6 +22,7 @@
     "next-seo": "^5.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "^0.31.2",
     "typescript": "4.8.4"
   },
   "devDependencies": {
