--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix"
@@ -20,6 +21,7 @@
     "eslint-config-next": "13.0.2",
     "next": "13.0.2",
     "next-seo": "^5.14.1",
+    "next-sitemap": "^3.1.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sharp": "^0.31.2",
