--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint",
-    "lint:fix": "next lint --fix"
+    "lint:fix": "next lint --fix",
+    "format:check": "prettier .",
+    "format:fix": "prettier . --write"
   },
   "dependencies": {
     "@next/font": "^13.0.3",
@@ -30,7 +32,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
     "tailwindcss": "^3.2.2"
   }
 }
