--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint",
+    "lint:check": "next lint",
     "lint:fix": "next lint --fix",
     "format:check": "prettier .",
-    "format:fix": "prettier . --write"
+    "format:fix": "prettier . --write",
+    "code:check": "next lint && prettier .",
+    "code:fix": "next lint --fix && prettier . --write"
   },
   "dependencies": {
     "@next/font": "^13.0.3",
@@ -33,6 +35,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.2"
   }
 }
