--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "lint:fix": "next lint --fix",
     "format:check": "prettier .",
     "format:fix": "prettier . --write",
-    "code:check": "next lint && prettier .",
-    "code:fix": "next lint --fix && prettier . --write"
+    "code:check": "yarn run format:check && yarn run lint:check",
+    "code:fix": "yarn run format:fix && yarn run lint:fix"
   },
   "dependencies": {
     "@next/font": "^13.0.3",
@@ -35,6 +35,7 @@
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "prettier": "^2.8.4",
+    "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.2"
   }
